upgrade spring 6 and jdbi3